change data_train_test name

--- a/AT_T_analysis.ipynb
+++ b/AT_T_analysis.ipynb
@@ -246,6 +246,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les trois dernières colonnes sont non informatives et nous les supprimerons donc."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -301,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On remarque un déséquilibre dans les catégories. Le nombre de ham est beaucoup plus représenté que les spam. Pour gérer ce déséquilibre "
+    "On remarque un déséquilibre dans les catégories. Le nombre de ham est beaucoup plus représenté que les spam. Pour gérer ce déséquilibre nous appliquerons des approches d'oversampling et undersampling."
    ]
   },
   {
@@ -412,6 +419,13 @@
     "\n",
     "data['v2_clean'] = data['v2'].apply(lambda s : re.sub(r'[^\\w\\s]', '', s).lower())\n",
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lemmatisation et tokenisation"
    ]
   },
   {
@@ -599,7 +613,7 @@
    "source": [
     "On travaille sur une tâche de classification où les classes sont déséquilibrées (il y a environ 6 fois plus de ham que de spams), donc on utilise la stratification pour s' assurer que la proportion de chaque classe est maintenue dans les ensembles dde train et test.\n",
     "\n",
-    "De plus, les hams représentent 87% des données, alors que les spams représentent seulement 13%. On va donc sélectionner un test size donc on choisit la valeur de l'argument test_size de manière à maintenir la même proportion entre les classes dans l'ensemble de test que dans l'ensemble d'entraînement. Cela garantit que votre modèle est évalué de manière équitable sur toutes les classes"
+    "De plus, les hams représentent 87% des données, alors que les spams représentent seulement 13%. On va donc sélectionner un test size donc on choisit la valeur de l'argument test_size de manière à maintenir la même proportion entre les classes dans l'ensemble de test que dans l'ensemble d'entraînement. Cela garantit que notre modèle est évalué de manière équitable sur toutes les classes"
    ]
   },
   {
@@ -726,9 +740,16 @@
    ],
    "source": [
     "# split train test sets with 0.13 due to \n",
-    "data_train_test, data_val = train_test_split(data, test_size=0.13, stratify=data['v1'], random_state=2)\n",
-    "print(\"\\n data_train_test \\n\",data_train_test)\n",
+    "data_train, data_val = train_test_split(data, test_size=0.13, stratify=data['v1'], random_state=2)\n",
+    "print(\"\\n data_train \\n\",data_train)\n",
     "print(\"\\n data_val \\n\",data_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Création de données d'Oversampling et undersampling"
    ]
   },
   {
@@ -736,8 +757,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La valeur cible étant déséquillibrée nous pouvons tenter d'équilibrer les classes en effectuant de l'undersampling réduire la taille de la classe majoritaire (ham) ou bien de l'oversampling pour augmenter le nombre d'exemples de la catégorie minoritaire (spam) . afin d'améliiorer  les performances du training.\n",
+    "La valeur cible étant déséquillibrée nous pouvons tenter d'équilibrer les classes en effectuant de l'undersampling réduire la taille de la classe majoritaire (ham) ou bien de l'oversampling pour augmenter le nombre d'exemples de la catégorie minoritaire (spam) . afin d'améliiorer  les performances du training à venir.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### undersampling"
    ]
   },
   {
@@ -800,10 +828,17 @@
     "  # et .reset_index(drop=True) réinitialise les index des lignes pour créer un nouvel ensemble de données sous-échantillonné et mélangé.\".  \n",
     "  return pd.concat([data_sample_1,data_sample_2], axis=0).sample(frac=1).reset_index(drop=True)\n",
     "\n",
-    "data_red = data_under_sampling(data_train_test, 4)\n",
+    "data_red = data_under_sampling(data_train, 4)\n",
     "print(data_red.head())\n",
     "print(data_red.shape)\n",
     "print(data_red['v1'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Oversampling"
    ]
   },
   {
@@ -872,12 +907,19 @@
     "    return data_over_sampled\n",
     "\n",
     "# Utilisez la fonction pour effectuer l'oversampling avec un facteur de 4\n",
-    "data_over_sampled = data_over_sampling(data_train_test, 4)\n",
+    "data_over_sampled = data_over_sampling(data_train, 4)\n",
     "\n",
     "# Affichez les cinq premières lignes, la forme et la distribution des classes\n",
     "print(data_over_sampled.head())\n",
     "print(data_over_sampled.shape)\n",
     "print(data_over_sampled['v1'].value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Padding "
    ]
   },
   {
@@ -920,7 +962,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### target prepocessing"
+    "### Target prepocessing"
    ]
   },
   {
