--- a/AT_T_analysis_bis.ipynb
+++ b/AT_T_analysis_bis.ipynb
@@ -23,18 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-12-11 15:31:50.296142: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: SSE4.1 SSE4.2, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# librairies usuelles\n",
     "import pandas as pd\n",
@@ -56,12 +47,14 @@
     "from sklearn.metrics import ConfusionMatrixDisplay, accuracy_score, precision_score, recall_score\n",
     "\n",
     "# On importe également les plugings params pour Tensorboard, pour le tracking des performances de nos modèles\n",
-    "from tensorboard.plugins.hparams import api as hp"
+    "from tensorboard.plugins.hparams import api as hp\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +63,7 @@
      "text": [
       "Collecting en-core-web-md==3.7.1\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl (42.8 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.8/42.8 MB\u001b[0m \u001b[31m38.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.8/42.8 MB\u001b[0m \u001b[31m27.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25hRequirement already satisfied: spacy<3.8.0,>=3.7.2 in /Users/amandinesandri/miniforge3/lib/python3.10/site-packages (from en-core-web-md==3.7.1) (3.7.2)\n",
       "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /Users/amandinesandri/miniforge3/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-md==3.7.1) (3.0.12)\n",
       "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /Users/amandinesandri/miniforge3/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-md==3.7.1) (1.0.5)\n",
@@ -117,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +142,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre de valeurs NaN par colonne :\n",
+      "v1               0\n",
+      "v2               0\n",
+      "Unnamed: 2    5522\n",
+      "Unnamed: 3    5560\n",
+      "Unnamed: 4    5566\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Compter le nombre de valeurs NaN pour chaque colonne\n",
+    "nan_counts = data.isna().sum()\n",
+    "\n",
+    "print(\"Nombre de valeurs NaN par colonne :\")\n",
+    "print(nan_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +299,7 @@
        "4  nah i dont think he goes to usf he lives aroun...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +413,7 @@
        "4                                 nah think usf live  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -463,44 +484,37 @@
     "print(tokenizer.index_word)\n",
     "\n",
     "# Afficher les premières lignes du DataFrame 'data' pour visualiser les résultats\n",
-    "print(data.head())"
+    "print(data.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0        ham\n",
-      "1        ham\n",
-      "2       spam\n",
-      "3        ham\n",
-      "4        ham\n",
-      "        ... \n",
-      "5567    spam\n",
-      "5568     ham\n",
-      "5569     ham\n",
-      "5570     ham\n",
-      "5571     ham\n",
-      "Name: v1, Length: 5572, dtype: object\n"
+      "v1\n",
+      "ham     4825\n",
+      "spam     747\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "print(data.v1)"
+    "print(data.v1.value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_pad = tf.keras.preprocessing.sequence.pad_sequences(data.v2_tokenized, padding=\"post\")"
+    "#supression de l'étape de padding pour l'ffectuer après l'oversampling / unersampling \n",
+    "#data_pad = tf.keras.preprocessing.sequence.pad_sequences(data.v2_tokenized, padding=\"post\")"
    ]
   },
   {
@@ -533,14 +547,23 @@
     }
    ],
    "source": [
-    "data['target'] = data['v1'].map({'ham': 0, 'spam': 1})\n",
-    "xtrain, xval, ytrain, yval = train_test_split(data_pad,data.target, test_size=0.3)\n",
-    "ytrain = ytrain.astype(float)\n",
-    "yval = yval.astype(float)\n",
-    "print(type(yval[0]))\n",
+    "def data_under_sampling(data, nb_reduce):\n",
+    "  data_sample_2 = data.loc[data['v1']=='spam',:]\n",
+    "  len_class_sub = len(data_sample_2)\n",
+    "  # extrait toutes les lignes de l'ensemble de données où la colonne 'v1' a la valeur 'ham'.\n",
+    "  # Ensuite, la méthode .sample() est utilisée pour sous-échantillonner cette classe \"ham\". \n",
+    "  # Le nombre d'échantillons de la classe \"ham\" sous-échantillonnée est déterminé en multipliant nb_reduce par la longueur de la classe \"spam\" calculée précédemment. \n",
+    "  # Cela réduit la classe majoritaire à un multiple de la taille de la classe minoritaire.\n",
+    "  data_sample_1 = data.loc[data['v1']=='ham',:].sample(nb_reduce * len_class_sub) \n",
+    "  # Concatène verticalement (axe 0) les deux sous-ensembles de données résultants (le sous-ensemble de données \"ham\" sous-échantillonné et \n",
+    "  # le sous-ensemble de données \"spam\"). Ensuite, .sample(frac=1) est utilisé pour mélanger aléatoirement les lignes de l'ensemble de données résultant, \n",
+    "  # et .reset_index(drop=True) réinitialise les index des lignes pour créer un nouvel ensemble de données sous-échantillonné et mélangé.\".  \n",
+    "  return pd.concat([data_sample_1,data_sample_2], axis=0).sample(frac=1).reset_index(drop=True)\n",
     "\n",
-    "#target = (data['v1'] == 'spam').astype(int)\n",
-    "#X = data['v2_tokenized']"
+    "data_red = data_under_sampling(data_train_test, 4)\n",
+    "print(data_red.head())\n",
+    "print(data_red.shape)\n",
+    "print(data_red['v1'].value_counts())"
    ]
   },
   {
