undersampling before train validation datasets creation

--- a/AT_T_analysis_bis.ipynb
+++ b/AT_T_analysis_bis.ipynb
@@ -560,10 +560,22 @@
     "  # et .reset_index(drop=True) réinitialise les index des lignes pour créer un nouvel ensemble de données sous-échantillonné et mélangé.\".  \n",
     "  return pd.concat([data_sample_1,data_sample_2], axis=0).sample(frac=1).reset_index(drop=True)\n",
     "\n",
-    "data_red = data_under_sampling(data_train_test, 4)\n",
+    "data_red = data_under_sampling(data, 4)\n",
     "print(data_red.head())\n",
     "print(data_red.shape)\n",
     "print(data_red['v1'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split train test sets with 0.13 due to \n",
+    "data_train_test, data_val = train_test_split(data_red, test_size=0.13, stratify=data['v1'], random_state=2)\n",
+    "print(data_train_test)\n",
+    "print(data_val)"
    ]
   },
   {
