finalement undersampling après train_test et val creation ...

--- a/AT_T_analysis_bis.ipynb
+++ b/AT_T_analysis_bis.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
      "text": [
       "Collecting en-core-web-md==3.7.1\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl (42.8 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.8/42.8 MB\u001b[0m \u001b[31m27.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.8/42.8 MB\u001b[0m \u001b[31m20.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25hRequirement already satisfied: spacy<3.8.0,>=3.7.2 in /Users/amandinesandri/miniforge3/lib/python3.10/site-packages (from en-core-web-md==3.7.1) (3.7.2)\n",
       "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /Users/amandinesandri/miniforge3/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-md==3.7.1) (3.0.12)\n",
       "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /Users/amandinesandri/miniforge3/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-md==3.7.1) (1.0.5)\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "4  nah i dont think he goes to usf he lives aroun...  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,104 +320,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>v1</th>\n",
-       "      <th>v2</th>\n",
-       "      <th>v2_clean</th>\n",
-       "      <th>v2_lemma</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
-       "      <td>go until jurong point crazy available only in ...</td>\n",
-       "      <td>jurong point crazy available bugis n great wor...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Ok lar... Joking wif u oni...</td>\n",
-       "      <td>ok lar joking wif u oni</td>\n",
-       "      <td>ok lar joke wif u oni</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>spam</td>\n",
-       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
-       "      <td>free entry in 2 a wkly comp to win fa cup fina...</td>\n",
-       "      <td>free entry 2 wkly comp win fa cup final tkts 2...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>U dun say so early hor... U c already then say...</td>\n",
-       "      <td>u dun say so early hor u c already then say</td>\n",
-       "      <td>u dun early hor u c</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
-       "      <td>nah i dont think he goes to usf he lives aroun...</td>\n",
-       "      <td>nah think usf live</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     v1                                                 v2  \\\n",
-       "0   ham  Go until jurong point, crazy.. Available only ...   \n",
-       "1   ham                      Ok lar... Joking wif u oni...   \n",
-       "2  spam  Free entry in 2 a wkly comp to win FA Cup fina...   \n",
-       "3   ham  U dun say so early hor... U c already then say...   \n",
-       "4   ham  Nah I don't think he goes to usf, he lives aro...   \n",
-       "\n",
-       "                                            v2_clean  \\\n",
-       "0  go until jurong point crazy available only in ...   \n",
-       "1                            ok lar joking wif u oni   \n",
-       "2  free entry in 2 a wkly comp to win fa cup fina...   \n",
-       "3        u dun say so early hor u c already then say   \n",
-       "4  nah i dont think he goes to usf he lives aroun...   \n",
-       "\n",
-       "                                            v2_lemma  \n",
-       "0  jurong point crazy available bugis n great wor...  \n",
-       "1                              ok lar joke wif u oni  \n",
-       "2  free entry 2 wkly comp win fa cup final tkts 2...  \n",
-       "3                                u dun early hor u c  \n",
-       "4                                 nah think usf live  "
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# lemmatize \n",
     "nlp = spacy.load('en_core_web_md')\n",
@@ -427,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,6 +430,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split train test sets with 0.13 due to \n",
+    "data_train_test, data_val = train_test_split(data, test_size=0.13, stratify=data['v1'], random_state=2)\n",
+    "print(data_train_test)\n",
+    "print(data_val)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -535,14 +452,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'numpy.float64'>\n"
+      "     v1                                                 v2  \\\n",
+      "0   ham  Great. I was getting worried about you. Just k...   \n",
+      "1   ham  I got to video tape pple type in message lor. ...   \n",
+      "2   ham                                            Okie...   \n",
+      "3   ham  I have 2 sleeping bags, 1 blanket and paper an...   \n",
+      "4  spam  SPJanuary Male Sale! Hot Gay chat now cheaper,...   \n",
+      "\n",
+      "                                            v2_clean  \\\n",
+      "0  great i was getting worried about you just kno...   \n",
+      "1  i got to video tape pple type in message lor u...   \n",
+      "2                                               okie   \n",
+      "3  i have 2 sleeping bags 1 blanket and paper and...   \n",
+      "4  spjanuary male sale hot gay chat now cheaper c...   \n",
+      "\n",
+      "                                            v2_lemma  \\\n",
+      "0  great worried know wonderful caring person lik...   \n",
+      "1  video tape pple type message lor u free wan 2 ...   \n",
+      "2                                               okie   \n",
+      "3         2 sleep bag 1 blanket paper   phone detail   \n",
+      "4  spjanuary male sale hot gay chat cheap 0870922...   \n",
+      "\n",
+      "                                        v2_tokenized  \n",
+      "0  [53, 768, 9, 499, 1, 147, 15, 13, 86, 9, 2, 31...  \n",
+      "1  [250, 1, 1661, 477, 62, 27, 2, 12, 126, 4, 119...  \n",
+      "2                                              [399]  \n",
+      "3                  [4, 83, 918, 80, 1, 598, 37, 300]  \n",
+      "4  [1, 1, 825, 353, 826, 118, 526, 1, 610, 247, 1...  \n",
+      "(3735, 5)\n",
+      "v1\n",
+      "ham     2988\n",
+      "spam     747\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -560,7 +508,7 @@
     "  # et .reset_index(drop=True) réinitialise les index des lignes pour créer un nouvel ensemble de données sous-échantillonné et mélangé.\".  \n",
     "  return pd.concat([data_sample_1,data_sample_2], axis=0).sample(frac=1).reset_index(drop=True)\n",
     "\n",
-    "data_red = data_under_sampling(data, 4)\n",
+    "data_red = data_under_sampling(data_train_test, 4)\n",
     "print(data_red.head())\n",
     "print(data_red.shape)\n",
     "print(data_red['v1'].value_counts())"
@@ -568,15 +516,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# split train test sets with 0.13 due to \n",
-    "data_train_test, data_val = train_test_split(data_red, test_size=0.13, stratify=data['v1'], random_state=2)\n",
-    "print(data_train_test)\n",
-    "print(data_val)"
-   ]
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Found input variables with inconsistent numbers of samples: [3735, 5572]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/amandinesandri/Documents/GitHub/Block_4_Deep_Learning/AT_T_analysis_bis.ipynb Cell 20\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/amandinesandri/Documents/GitHub/Block_4_Deep_Learning/AT_T_analysis_bis.ipynb#X40sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# split train test sets with 0.13 due to \u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/amandinesandri/Documents/GitHub/Block_4_Deep_Learning/AT_T_analysis_bis.ipynb#X40sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m data_train_test, data_val \u001b[39m=\u001b[39m train_test_split(data_red, test_size\u001b[39m=\u001b[39;49m\u001b[39m0.13\u001b[39;49m, stratify\u001b[39m=\u001b[39;49mdata[\u001b[39m'\u001b[39;49m\u001b[39mv1\u001b[39;49m\u001b[39m'\u001b[39;49m], random_state\u001b[39m=\u001b[39;49m\u001b[39m2\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/amandinesandri/Documents/GitHub/Block_4_Deep_Learning/AT_T_analysis_bis.ipynb#X40sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(data_train_test)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/amandinesandri/Documents/GitHub/Block_4_Deep_Learning/AT_T_analysis_bis.ipynb#X40sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(data_val)\n",
+      "File \u001b[0;32m~/miniforge3/lib/python3.10/site-packages/sklearn/utils/_param_validation.py:214\u001b[0m, in \u001b[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    208\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    209\u001b[0m     \u001b[39mwith\u001b[39;00m config_context(\n\u001b[1;32m    210\u001b[0m         skip_parameter_validation\u001b[39m=\u001b[39m(\n\u001b[1;32m    211\u001b[0m             prefer_skip_nested_validation \u001b[39mor\u001b[39;00m global_skip_validation\n\u001b[1;32m    212\u001b[0m         )\n\u001b[1;32m    213\u001b[0m     ):\n\u001b[0;32m--> 214\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    215\u001b[0m \u001b[39mexcept\u001b[39;00m InvalidParameterError \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    216\u001b[0m     \u001b[39m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[1;32m    217\u001b[0m     \u001b[39m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[1;32m    218\u001b[0m     \u001b[39m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[1;32m    219\u001b[0m     \u001b[39m# message to avoid confusion.\u001b[39;00m\n\u001b[1;32m    220\u001b[0m     msg \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39msub(\n\u001b[1;32m    221\u001b[0m         \u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mparameter of \u001b[39m\u001b[39m\\\u001b[39m\u001b[39mw+ must be\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    222\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mparameter of \u001b[39m\u001b[39m{\u001b[39;00mfunc\u001b[39m.\u001b[39m\u001b[39m__qualname__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m must be\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    223\u001b[0m         \u001b[39mstr\u001b[39m(e),\n\u001b[1;32m    224\u001b[0m     )\n",
+      "File \u001b[0;32m~/miniforge3/lib/python3.10/site-packages/sklearn/model_selection/_split.py:2670\u001b[0m, in \u001b[0;36mtrain_test_split\u001b[0;34m(test_size, train_size, random_state, shuffle, stratify, *arrays)\u001b[0m\n\u001b[1;32m   2666\u001b[0m         CVClass \u001b[39m=\u001b[39m ShuffleSplit\n\u001b[1;32m   2668\u001b[0m     cv \u001b[39m=\u001b[39m CVClass(test_size\u001b[39m=\u001b[39mn_test, train_size\u001b[39m=\u001b[39mn_train, random_state\u001b[39m=\u001b[39mrandom_state)\n\u001b[0;32m-> 2670\u001b[0m     train, test \u001b[39m=\u001b[39m \u001b[39mnext\u001b[39;49m(cv\u001b[39m.\u001b[39;49msplit(X\u001b[39m=\u001b[39;49marrays[\u001b[39m0\u001b[39;49m], y\u001b[39m=\u001b[39;49mstratify))\n\u001b[1;32m   2672\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mlist\u001b[39m(\n\u001b[1;32m   2673\u001b[0m     chain\u001b[39m.\u001b[39mfrom_iterable(\n\u001b[1;32m   2674\u001b[0m         (_safe_indexing(a, train), _safe_indexing(a, test)) \u001b[39mfor\u001b[39;00m a \u001b[39min\u001b[39;00m arrays\n\u001b[1;32m   2675\u001b[0m     )\n\u001b[1;32m   2676\u001b[0m )\n",
+      "File \u001b[0;32m~/miniforge3/lib/python3.10/site-packages/sklearn/model_selection/_split.py:1745\u001b[0m, in \u001b[0;36mBaseShuffleSplit.split\u001b[0;34m(self, X, y, groups)\u001b[0m\n\u001b[1;32m   1715\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msplit\u001b[39m(\u001b[39mself\u001b[39m, X, y\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, groups\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m   1716\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Generate indices to split data into training and test set.\u001b[39;00m\n\u001b[1;32m   1717\u001b[0m \n\u001b[1;32m   1718\u001b[0m \u001b[39m    Parameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1743\u001b[0m \u001b[39m    to an integer.\u001b[39;00m\n\u001b[1;32m   1744\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1745\u001b[0m     X, y, groups \u001b[39m=\u001b[39m indexable(X, y, groups)\n\u001b[1;32m   1746\u001b[0m     \u001b[39mfor\u001b[39;00m train, test \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_iter_indices(X, y, groups):\n\u001b[1;32m   1747\u001b[0m         \u001b[39myield\u001b[39;00m train, test\n",
+      "File \u001b[0;32m~/miniforge3/lib/python3.10/site-packages/sklearn/utils/validation.py:453\u001b[0m, in \u001b[0;36mindexable\u001b[0;34m(*iterables)\u001b[0m\n\u001b[1;32m    434\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Make arrays indexable for cross-validation.\u001b[39;00m\n\u001b[1;32m    435\u001b[0m \n\u001b[1;32m    436\u001b[0m \u001b[39mChecks consistent length, passes through None, and ensures that everything\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    449\u001b[0m \u001b[39m    sparse matrix, or dataframe) or `None`.\u001b[39;00m\n\u001b[1;32m    450\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    452\u001b[0m result \u001b[39m=\u001b[39m [_make_indexable(X) \u001b[39mfor\u001b[39;00m X \u001b[39min\u001b[39;00m iterables]\n\u001b[0;32m--> 453\u001b[0m check_consistent_length(\u001b[39m*\u001b[39;49mresult)\n\u001b[1;32m    454\u001b[0m \u001b[39mreturn\u001b[39;00m result\n",
+      "File \u001b[0;32m~/miniforge3/lib/python3.10/site-packages/sklearn/utils/validation.py:407\u001b[0m, in \u001b[0;36mcheck_consistent_length\u001b[0;34m(*arrays)\u001b[0m\n\u001b[1;32m    405\u001b[0m uniques \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39munique(lengths)\n\u001b[1;32m    406\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(uniques) \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m--> 407\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    408\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mFound input variables with inconsistent numbers of samples: \u001b[39m\u001b[39m%r\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m    409\u001b[0m         \u001b[39m%\u001b[39m [\u001b[39mint\u001b[39m(l) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m lengths]\n\u001b[1;32m    410\u001b[0m     )\n",
+      "\u001b[0;31mValueError\u001b[0m: Found input variables with inconsistent numbers of samples: [3735, 5572]"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
